--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube</title>
+    <title>YouTube</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -112,9 +112,10 @@
             </div>
 
             <div class="videos">
-                <div class="video-list">
+                
+                <!-- <div class="video-list">
                     <div class="videoPreview">
-
+                        <img id="thumbnail" src="">
                     </div>
                     <div class="logo_description">
                         <div class="channel">
@@ -135,56 +136,9 @@
 
                         </div>
                     </div>
-                </div>
+                </div> -->
+                
 
-                <div class="video-list">
-                    <div class="videoPreview">
-
-                    </div>
-                    <div class="logo_description">
-                        <div class="channel">
-                            <img id="channel-logo" src="">
-                        </div>
-                        <div class="description">
-                            <p id="description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ut.
-                            </p>
-                            <div class="channel-name">
-                                <p id="video-channel-name">SonyLiv</p>
-                            </div>
-                            <div class="views">
-                                <p id="video-views">2M Views .</p>
-                                <div class="year">
-                                    <p id="video-year"> &nbsp; 1 Year ago</p>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="video-list">
-                    <div class="videoPreview">
-
-                    </div>
-                    <div class="logo_description">
-                        <div class="channel">
-                            <img id="channel-logo" src="">
-                        </div>
-                        <div class="description">
-                            <p id="description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ut.
-                            </p>
-                            <div class="channel-name">
-                                <p id="video-channel-name">SonyLiv</p>
-                            </div>
-                            <div class="views">
-                                <p id="video-views">2M Views .</p>
-                                <div class="year">
-                                    <p id="video-year"> &nbsp; 1 Year ago</p>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
             </div>
 
         </div>
