--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="search-bar">
                 <input type="text" placeholder="Search" id="search" name="search">
-                <button id="serch-icon"><i class="fa-solid fa-magnifying-glass fa-xl"
+                <button id="search-icon"><i class="fa-solid fa-magnifying-glass fa-xl"
                         style="color: #878f9b;"></i></button>
 
                 <div class="voice-icon">
@@ -152,8 +152,7 @@
 
 
 
-
-    <script src="script.js"></script>
+    <script  src="script.js"></script>
 </body>
 
 </html>
